--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm src/index.ts",
+    "start": "node --max-old-space-size=4096 --loader ts-node/esm src/index.ts",
     "prettier": "prettier --write .",
     "lint": "eslint ."
   },
   "engines": {
-    "node": ">=20.11.0"
+    "node": ">=20.11.0""start": "node --max-old-space-size=4096 --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "",
